changed s3 bucket details

--- a/penguins-cohort.ipynb
+++ b/penguins-cohort.ipynb
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "3ea8d2fd-7dd4-43c8-b9d9-5372448d72a6",
    "metadata": {
     "tags": []
@@ -184,16 +184,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\n",
-      "    \"Location\": \"/mlschool\"\n",
-      "}\n"
+      "\n",
+      "An error occurred (BucketAlreadyOwnedByYou) when calling the CreateBucket operation: Your previous request to create the named bucket succeeded and you already own it.\n"
      ]
     }
    ],
    "source": [
-    "BUCKET = \"mlschool\"\n",
+    "BUCKET = \"tssrao-mlschool\"\n",
     "\n",
-    "!aws s3api create-bucket --bucket $BUCKET"
+    "!aws s3api create-bucket --bucket $BUCKET --create-bucket-configuration LocationConstraint=ap-southeast-2"
    ]
   },
   {
@@ -212,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "882a8be9-dc31-4df1-9009-3b2d0284cb70",
    "metadata": {
     "tags": []
@@ -222,7 +221,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset S3 location: s3://mlschool/penguins/data.csv\n"
+      "Dataset S3 location: s3://tssrao-mlschool/penguins/data.csv\n"
      ]
     }
    ],
@@ -261,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "a19b546a-6884-483b-8cda-0521e2656a99",
    "metadata": {
     "tags": []
@@ -443,7 +442,7 @@
        "[344 rows x 7 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "fb6ba7c0-1bd6-4fe5-8b7f-f6cbdfd3846c",
    "metadata": {
     "tags": []
@@ -492,7 +491,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting penguins/preprocessor.py\n"
+      "Writing penguins/preprocessor.py\n"
      ]
     }
    ],
@@ -669,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "d1f122a4-acff-4687-91b9-bfef13567d88",
    "metadata": {
     "tags": []
@@ -682,18 +681,18 @@
       "Folders: ['train-baseline', 'test-baseline', 'train', 'validation', 'test', 'pipeline']\n",
       "\n",
       "Baseline train:\n",
-      "{\"island\":\"Biscoe\",\"culmen_length_mm\":51.1,\"culmen_depth_mm\":16.5,\"flipper_length_mm\":225.0,\"body_mass_g\":5250.0,\"groundtruth\":\"2\"}\n",
-      "{\"island\":\"Biscoe\",\"culmen_length_mm\":38.6,\"culmen_depth_mm\":17.2,\"flipper_length_mm\":199.0,\"body_mass_g\":3750.0,\"groundtruth\":\"0\"}\n",
-      "{\"island\":\"Biscoe\",\"culmen_length_mm\":39.0,\"culmen_depth_mm\":17.5,\"flipper_length_mm\":186.0,\"body_mass_g\":3550.0,\"groundtruth\":\"0\"}\n",
-      "{\"island\":\"Biscoe\",\"culmen_length_mm\":50.0,\"culmen_depth_mm\":16.3,\"flipper_length_mm\":230.0,\"body_mass_g\":5700.0,\"groundtruth\":\"2\"}\n",
-      "{\"island\":\"Biscoe\",\"culmen_length_mm\":47.2,\"culmen_depth_mm\":13.7,\"flipper_length_mm\":214.0,\"body_mass_g\":4925.0,\"groundtruth\":\"2\"}\n",
+      "{\"island\":\"Biscoe\",\"culmen_length_mm\":49.2,\"culmen_depth_mm\":15.2,\"flipper_length_mm\":221.0,\"body_mass_g\":6300.0,\"groundtruth\":\"2\"}\n",
+      "{\"island\":\"Biscoe\",\"culmen_length_mm\":49.4,\"culmen_depth_mm\":15.8,\"flipper_length_mm\":216.0,\"body_mass_g\":4925.0,\"groundtruth\":\"2\"}\n",
+      "{\"island\":\"Torgersen\",\"culmen_length_mm\":34.6,\"culmen_depth_mm\":21.1,\"flipper_length_mm\":198.0,\"body_mass_g\":4400.0,\"groundtruth\":\"0\"}\n",
+      "{\"island\":\"Dream\",\"culmen_length_mm\":39.8,\"culmen_depth_mm\":19.1,\"flipper_length_mm\":184.0,\"body_mass_g\":4650.0,\"groundtruth\":\"0\"}\n",
+      "{\"island\":\"Dream\",\"culmen_length_mm\":37.3,\"culmen_depth_mm\":16.8,\"flipper_length_mm\":192.0,\"body_mass_g\":3000.0,\"groundtruth\":\"0\"}\n",
       "\n",
       "Baseline test:\n",
-      "{\"island\":\"Dream\",\"culmen_length_mm\":45.7,\"culmen_depth_mm\":17.0,\"flipper_length_mm\":195.0,\"body_mass_g\":3650.0,\"groundtruth\":\"1\"}\n",
-      "{\"island\":\"Dream\",\"culmen_length_mm\":41.1,\"culmen_depth_mm\":19.0,\"flipper_length_mm\":182.0,\"body_mass_g\":3425.0,\"groundtruth\":\"0\"}\n",
-      "{\"island\":\"Dream\",\"culmen_length_mm\":39.8,\"culmen_depth_mm\":19.1,\"flipper_length_mm\":184.0,\"body_mass_g\":4650.0,\"groundtruth\":\"0\"}\n",
-      "{\"island\":\"Biscoe\",\"culmen_length_mm\":35.5,\"culmen_depth_mm\":16.2,\"flipper_length_mm\":195.0,\"body_mass_g\":3350.0,\"groundtruth\":\"0\"}\n",
-      "{\"island\":\"Biscoe\",\"culmen_length_mm\":49.4,\"culmen_depth_mm\":15.8,\"flipper_length_mm\":216.0,\"body_mass_g\":4925.0,\"groundtruth\":\"2\"}\n"
+      "{\"island\":\"Dream\",\"culmen_length_mm\":50.9,\"culmen_depth_mm\":19.1,\"flipper_length_mm\":196.0,\"body_mass_g\":3550.0,\"groundtruth\":\"1\"}\n",
+      "{\"island\":\"Biscoe\",\"culmen_length_mm\":49.5,\"culmen_depth_mm\":16.1,\"flipper_length_mm\":224.0,\"body_mass_g\":5650.0,\"groundtruth\":\"2\"}\n",
+      "{\"island\":\"Dream\",\"culmen_length_mm\":51.7,\"culmen_depth_mm\":20.3,\"flipper_length_mm\":194.0,\"body_mass_g\":3775.0,\"groundtruth\":\"1\"}\n",
+      "{\"island\":\"Biscoe\",\"culmen_length_mm\":43.2,\"culmen_depth_mm\":14.5,\"flipper_length_mm\":208.0,\"body_mass_g\":4450.0,\"groundtruth\":\"2\"}\n",
+      "{\"island\":\"Biscoe\",\"culmen_length_mm\":45.3,\"culmen_depth_mm\":13.7,\"flipper_length_mm\":210.0,\"body_mass_g\":4300.0,\"groundtruth\":\"2\"}\n"
      ]
     }
    ],
@@ -743,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "86de7edd-18b0-40d1-ac8e-0f3ef4469be6",
    "metadata": {
     "tags": []
@@ -788,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "c7e0a332-e54e-4e57-97c7-9b54f4058738",
    "metadata": {
     "tags": []
@@ -817,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "4b982bc3-28f0-473f-b8d2-fc35dd251e37",
    "metadata": {
     "tags": []
@@ -847,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "2187b65e-e504-40a5-ad05-82f54885805c",
    "metadata": {
     "tags": []
@@ -887,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "564fe6fb-00aa-480f-a58f-3144b2e33a9d",
    "metadata": {
     "tags": []
@@ -918,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "f4410f2f-a17b-4272-abd2-e092e134174c",
    "metadata": {
     "tags": []
@@ -5483,7 +5482,7 @@
   "kernelspec": {
    "display_name": "Python 3 (TensorFlow 2.6 Python 3.8 CPU Optimized)",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-1:081325390199:image/tensorflow-2.6-cpu-py38-ubuntu20.04-v1"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:ap-southeast-2:452832661640:image/tensorflow-2.6-cpu-py38-ubuntu20.04-v1"
   },
   "language_info": {
    "codemirror_mode": {
