fix sagemaker version and add missing packges

--- a/penguins/penguins-cohort.ipynb
+++ b/penguins/penguins-cohort.ipynb
@@ -28,6 +28,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "a2ad1064",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install -q --upgrade pip\n",
+    "!pip install -q --upgrade awscli boto3\n",
+    "!pip install -q sagemaker==2.173.0\n",
+    "!pip show sagemaker"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 126,
    "id": "212a0538-62b5-4875-a59c-1a4e1a833a07",
    "metadata": {
