--- a/penguins/penguins-setup.ipynb
+++ b/penguins/penguins-setup.ipynb
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "b99593fe-d51a-4593-9741-a43a44a2d174",
    "metadata": {
     "tags": []
@@ -497,7 +497,9 @@
     "\n",
     "import boto3\n",
     "import sagemaker\n",
+    "\n",
     "from pathlib import Path\n",
+    "from sagemaker.workflow.pipeline_context import PipelineSession\n",
     "\n",
     "\n",
     "BUCKET = \"mlschool\"\n",
@@ -509,7 +511,8 @@
     "iam_client = boto3.client(\"iam\")\n",
     "role = sagemaker.get_execution_role()\n",
     "region = boto3.Session().region_name\n",
-    "sagemaker_session = sagemaker.session.Session()"
+    "sagemaker_session = sagemaker.session.Session()\n",
+    "pipeline_session = PipelineSession()"
    ]
   },
   {
@@ -802,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42c9317f-feac-4cad-8e53-ebe244732ab3",
+   "id": "650916d2-e34a-4e40-9918-4bcf78161ffc",
    "metadata": {},
    "outputs": [],
    "source": []
