--- a/mnist/mnist.ipynb
+++ b/mnist/mnist.ipynb
@@ -14,55 +14,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "3ae06bac-01d0-477e-b9f8-1fdd3ebf3dc7",
-   "metadata": {},
-   "source": [
-    "Let's make sure we are running the latest version of the SakeMaker's SDK. **Restart the notebook** after you upgrade the library."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "505a53a1-babe-4238-ad19-e401a9f0a4a7",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-      "sagemaker 2.165.0 requires PyYAML==6.0, but you have pyyaml 5.4.1 which is incompatible.\u001b[0m\u001b[31m\n",
-      "\u001b[0m\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-      "awscli 1.27.158 requires PyYAML<5.5,>=3.10, but you have pyyaml 6.0 which is incompatible.\u001b[0m\u001b[31m\n",
-      "\u001b[0m\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0mName: sagemaker\n",
-      "Version: 2.165.0\n",
-      "Summary: Open source library for training and deploying models on Amazon SageMaker.\n",
-      "Home-page: https://github.com/aws/sagemaker-python-sdk/\n",
-      "Author: Amazon Web Services\n",
-      "Author-email: \n",
-      "License: Apache License 2.0\n",
-      "Location: /usr/local/lib/python3.8/site-packages\n",
-      "Requires: attrs, boto3, cloudpickle, google-pasta, importlib-metadata, jsonschema, numpy, packaging, pandas, pathos, platformdirs, protobuf, protobuf3-to-dict, PyYAML, schema, smdebug-rulesconfig, tblib\n",
-      "Required-by: \n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install -q --upgrade pip\n",
-    "!pip install -q --upgrade awscli boto3\n",
-    "!pip install -q --upgrade PyYAML==6.0\n",
-    "!pip install -q --upgrade sagemaker==2.165.0\n",
-    "!pip show sagemaker"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "8736d294-1434-4739-82a3-d0e7414a41bb",
@@ -77,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "7b96a6d2-3cd1-49ca-8219-8929c93b741d",
    "metadata": {
     "tags": []
@@ -115,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "e3ee4d0e-d3a6-4ac3-bd60-e04dd7028ea1",
    "metadata": {
     "tags": []
@@ -161,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "ba4210d6-f612-4f7b-9b18-397e2a8ac8e3",
    "metadata": {
     "tags": []
@@ -194,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "6a47f00d-c97c-4dde-b588-21c1f3782c12",
    "metadata": {
     "tags": []
@@ -518,14 +469,14 @@
        "[10 rows x 785 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(DATASET_FOLDER / \"mnist_train.csv\", nrows=10)\n",
-    "df"
+    "df = pd.read_csv(DATASET_FOLDER / \"mnist_train.csv\")\n",
+    "df.head(10)"
    ]
   },
   {
@@ -1156,7 +1107,7 @@
     "vcpuNum": 96
    }
   ],
-  "instance_type": "ml.t3.medium",
+  "instance_type": "ml.m5.large",
   "kernelspec": {
    "display_name": "Python 3 (TensorFlow 2.6 Python 3.8 CPU Optimized)",
    "language": "python",
