Improved the way we share the pipeline and classes files with the endpoint

--- a/penguins/penguins-endpoint.ipynb
+++ b/penguins/penguins-endpoint.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "09e73d7a-a972-4d75-ae0b-57e69e65580a",
    "metadata": {
     "tags": []
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "7a118412-1ce3-4db1-821a-4e7c73772361",
    "metadata": {
     "tags": []
@@ -58,38 +58,9 @@
     "\n",
     "ENDPOINT = \"penguins-endpoint\"\n",
     "MODEL_PACKAGE_GROUP = \"penguins\"\n",
-    "GROUND_TRUTH_LOCATION = f\"{S3_LOCATION}/monitoring/groundtruth\" "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "75cf322a-4b8b-4d28-8b79-7689edf3c373",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## Deploy Latest Model From Registry\n",
+    "GROUND_TRUTH_LOCATION = f\"{S3_LOCATION}/monitoring/groundtruth\" \n",
     "\n",
-    "We can deploy a model from the Model Registry using SageMaker's SDK or the [boto3 SageMaker Client API](https://boto3.amazonaws.com/v1/documentation/api/latest/reference/services/sagemaker.html)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7b3fd68c-9d3e-4def-9fe9-bf5cc7b7e089",
-   "metadata": {},
-   "source": [
-    "Let's create a couple of functions that we can use to send a request to the endpoint and test whether the model is working properly."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "91e613a1-de76-4286-94ff-dab42413d956",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "\n",
     "def get_predictor(endpoint_name, json_predictor=False):\n",
     "    \"\"\"\n",
     "    This function waits for the endpoint to be ready to serve traffic and then returns \n",
@@ -109,9 +80,39 @@
     "        Predictor(endpoint_name=endpoint_name, serializer=JSONSerializer(), deserializer=JSONDeserializer()) \n",
     "        if json_predictor \n",
     "        else Predictor(endpoint_name=endpoint_name)\n",
-    "    )\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75cf322a-4b8b-4d28-8b79-7689edf3c373",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "## Deploy Latest Model From Registry\n",
     "\n",
-    "\n",
+    "We can deploy a model from the Model Registry using SageMaker's SDK or the [boto3 SageMaker Client API](https://boto3.amazonaws.com/v1/documentation/api/latest/reference/services/sagemaker.html)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b3fd68c-9d3e-4def-9fe9-bf5cc7b7e089",
+   "metadata": {},
+   "source": [
+    "Let's create a function that we can use to test whether the model is working properly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "91e613a1-de76-4286-94ff-dab42413d956",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "def test_endpoint(predictor):\n",
     "    \"\"\"\n",
     "    This is a simple function that sends a request to the endpoint and prints out\n",
@@ -145,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "0a17312f-4ac8-44fe-90a5-fd69c0422cd7",
    "metadata": {
     "tags": []
@@ -155,14 +156,14 @@
      "data": {
       "text/plain": [
        "{'ModelPackageGroupName': 'penguins',\n",
-       " 'ModelPackageVersion': 32,\n",
-       " 'ModelPackageArn': 'arn:aws:sagemaker:us-east-1:325223348818:model-package/penguins/32',\n",
-       " 'CreationTime': datetime.datetime(2023, 7, 25, 13, 3, 35, 785000, tzinfo=tzlocal()),\n",
+       " 'ModelPackageVersion': 38,\n",
+       " 'ModelPackageArn': 'arn:aws:sagemaker:us-east-1:325223348818:model-package/penguins/38',\n",
+       " 'CreationTime': datetime.datetime(2023, 7, 29, 12, 52, 50, 699000, tzinfo=tzlocal()),\n",
        " 'ModelPackageStatus': 'Completed',\n",
        " 'ModelApprovalStatus': 'Approved'}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "id": "dd1b8372-b9d7-43cc-b2b1-c45a1983252a",
    "metadata": {},
    "outputs": [],
@@ -491,19 +492,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "id": "d5e83ed2-8f05-4e09-8f7f-acacdb051be0",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'species': 'Chinstrap', 'prediction': 1, 'confidence': 0.834977508}"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModelError",
+     "evalue": "An error occurred (ModelError) when calling the InvokeEndpoint operation: Received server error (500) from primary with message \"{\"error\": \"An error occurred (404) when calling the HeadObject operation: Not Found\"}\". See https://us-east-1.console.aws.amazon.com/cloudwatch/home?region=us-east-1#logEventViewer:group=/aws/sagemaker/Endpoints/penguins-endpoint in account 325223348818 for more information.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModelError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-7c82fcc0c76e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m predictor.predict({\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0;34m\"island\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"Dream\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;34m\"culmen_length_mm\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m46.4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;34m\"culmen_depth_mm\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m18.6\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;34m\"flipper_length_mm\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m190.0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.8/site-packages/sagemaker/base_predictor.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, data, initial_args, target_model, target_variant, inference_id, custom_attributes)\u001b[0m\n\u001b[1;32m    183\u001b[0m             \u001b[0mcustom_attributes\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    184\u001b[0m         )\n\u001b[0;32m--> 185\u001b[0;31m         \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msagemaker_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msagemaker_runtime_client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minvoke_endpoint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mrequest_args\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    186\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_handle_response\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    187\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.8/site-packages/botocore/client.py\u001b[0m in \u001b[0;36m_api_call\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    533\u001b[0m                 )\n\u001b[1;32m    534\u001b[0m             \u001b[0;31m# The \"self\" in this scope is referring to the BaseClient.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 535\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_make_api_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moperation_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    536\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    537\u001b[0m         \u001b[0m_api_call\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpy_operation_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.8/site-packages/botocore/client.py\u001b[0m in \u001b[0;36m_make_api_call\u001b[0;34m(self, operation_name, api_params)\u001b[0m\n\u001b[1;32m    978\u001b[0m             \u001b[0merror_code\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparsed_response\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Error\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Code\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    979\u001b[0m             \u001b[0merror_class\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexceptions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_code\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merror_code\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 980\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0merror_class\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparsed_response\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moperation_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    981\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    982\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mparsed_response\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModelError\u001b[0m: An error occurred (ModelError) when calling the InvokeEndpoint operation: Received server error (500) from primary with message \"{\"error\": \"An error occurred (404) when calling the HeadObject operation: Not Found\"}\". See https://us-east-1.console.aws.amazon.com/cloudwatch/home?region=us-east-1#logEventViewer:group=/aws/sagemaker/Endpoints/penguins-endpoint in account 325223348818 for more information."
+     ]
     }
    ],
    "source": [
@@ -561,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "id": "d6c375f8-4805-4556-8b8c-cf1267a04f70",
    "metadata": {
     "tags": []
