--- a/penguins/penguins-monitoring.ipynb
+++ b/penguins/penguins-monitoring.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "id": "77cc3eac-251d-4114-ae39-2e2957d8b658",
    "metadata": {},
    "outputs": [],
@@ -23,9 +23,10 @@
     "import json\n",
     "import os\n",
     "import sagemaker\n",
+    "import sys\n",
     "\n",
-    "from time import sleep\n",
     "from pathlib import Path\n",
+    "from time import sleep\n",
     "from IPython.display import JSON\n",
     "from sagemaker.s3 import S3Downloader\n",
     "from sagemaker.model_monitor import (\n",
@@ -33,19 +34,25 @@
     "    ModelQualityMonitor, EndpointInput\n",
     ")\n",
     "\n",
-    "BUCKET = \"mlschool\"\n",
-    "S3_FILEPATH = f\"s3://{BUCKET}/penguins\"\n",
-    "LOCAL_FILEPATH = Path().resolve() / \"data.csv\"\n",
-    "\n",
     "CODE_FOLDER = Path(\"code\")\n",
+    "sys.path.append(f\"./{CODE_FOLDER}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "bd98d8e7-5569-4ace-8f27-103332809ee6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from constants import *\n",
+    "\n",
     "ENDPOINT = \"penguins-endpoint\"\n",
     "\n",
-    "DATA_QUALITY_LOCATION = f\"{S3_FILEPATH}/monitoring/data-quality\"\n",
-    "MODEL_QUALITY_LOCATION = f\"{S3_FILEPATH}/monitoring/model-quality\"\n",
-    "\n",
-    "sagemaker_client = boto3.client(\"sagemaker\")\n",
-    "role = sagemaker.get_execution_role()\n",
-    "sagemaker_session = sagemaker.session.Session()"
+    "DATA_QUALITY_LOCATION = f\"{S3_LOCATION}/monitoring/data-quality\"\n",
+    "MODEL_QUALITY_LOCATION = f\"{S3_LOCATION}/monitoring/model-quality\""
    ]
   },
   {
@@ -58,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 7,
    "id": "ce7faec8-93a9-4671-8e0f-8f7401f7d8b7",
    "metadata": {
     "tags": []
@@ -165,6 +172,7 @@
    "cell_type": "markdown",
    "id": "00b7ba7b-433c-463c-8e5e-8b975a5be463",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1873,7 +1881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "2b1f84cb-bab9-4ac8-822d-f0d9a763df6a",
    "metadata": {
     "tags": []
@@ -1914,7 +1922,7 @@
        "<IPython.core.display.JSON object>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {
       "application/json": {
        "expanded": false,
@@ -2660,6 +2668,7 @@
     "vcpuNum": 96
    }
   ],
+  "instance_type": "ml.t3.medium",
   "kernelspec": {
    "display_name": "Python 3 (TensorFlow 2.6 Python 3.8 CPU Optimized)",
    "language": "python",
